# eternaltermlib

./: .gitignore  .gitmodules  .tsan-suppressions  CMakeLists.txt  Dockerfile.dev  NOTICE  README.md  docker-compose.yml
.github/workflows/: ci.yml  ios-cross.yml
cmake/: ios.toolchain.cmake
docs/: license-audit.md  porting-ios.md
include/: eternaltermlib.h
src/: session.cpp  session.hpp  session_internal.hpp  shim.cpp  transport.cpp  transport.hpp
test/: CMakeLists.txt  it_helpers.hpp  proxy_control.hpp  test_abi_smoke.c  test_integration.cpp  test_roaming.cpp  test_session_payload.cpp  test_transport_unit.cpp
test/fixture/: Dockerfile.etserver  entrypoint.sh  et-cat-raw-shell  et-cat-shell  et-exit0-shell  et-resize-echo-shell  plant_credential.sh
